# homeautomation

./: CMakeLists.txt  README.md  graph.sh  main.c
